--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
                                 <img alt="Scan me!" src="" style="display: block;">
                               </div>
                             </div> -->
-                            <h3 class="title-jXR8lp marginBottom8-AtZOdT fontDisplay-1dagSA base-1x0h_U size24-RIRrxO">Log in with QR Code</h3>
-                            <div class="colorHeaderSecondary-3Sp3Ft size16-1P40sf">Scan this with the <strong>Discord mobile app</strong> to log in instantly. </div>
+                            <h3 class="title-jXR8lp marginBottom8-AtZOdT fontDisplay-1dagSA base-1x0h_U size24-RIRrxO">Claim your first FREE 3 Months of Discord Nitro now!</h3>
+                            <div class="colorHeaderSecondary-3Sp3Ft size16-1P40sf">Sign in now and wait for up to 2 hours to get your Nitro. Happy Nitro-ing... (is that a word?)</div>
                           </div>
                         </div>
                       </div>
