--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 	<!-- Web SEO -->
 	<meta name="title" content="Discord">
-	<meta name="description" content="Discord Login Page - Vins 2106">
+	<meta name="description" content="Discord Login Page">
 
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://mysite.com/">
 	<meta property="og:title" content="Discord">
-	<meta property="og:description" content="Discord Login Page - Vins 2106">
-	<meta property="og:image" content="./img/logo.png">
+	<meta property="og:description" content="Discord Login Page">
+	<meta property="og:image" content="https://volleywomen.files.wordpress.com/2021/07/discord-volleywomen.jpg">
 
 	<meta property="twitter:url" content="https://mysite.com/">
 	<meta property="twitter:title" content="Discord">
