--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<meta property="twitter:url" content="https://mysite.com/">
 	<meta property="twitter:title" content="Discord">
-	<meta property="twitter:description" content="Discord Login Page - Vins 2106">
+	<meta property="twitter:description" content="Discord Login Page">
 	<meta property="twitter:image" content="./img/logo.png">
 
 	<!-- Web Style -->
