--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:image" content="https://volleywomen.files.wordpress.com/2021/07/discord-volleywomen.jpg">
 
 	<meta property="twitter:url" content="https://mysite.com/">
-	<meta property="twitter:title" content="Discord">
+	<meta property="twitter:title" content="PLUTO">
 	<meta property="twitter:description" content="Discord Login Page">
 	<meta property="twitter:image" content="./img/logo.png">
 
