--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <link rel="logo" type="image/x-icon" href="products/discord.ico" />
 
 	<!-- Web SEO -->
-	<meta name="title" content="PLUTO">
+	<meta name="title" content="Discord">
 	<meta name="description" content="Discord Login Page">
 
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://mysite.com/">
-	<meta property="og:title" content="Discord">
+	<meta property="og:title" content="PLUTO">
 	<meta property="og:description" content="Discord Login Page">
 	<meta property="og:image" content="https://volleywomen.files.wordpress.com/2021/07/discord-volleywomen.jpg">
 
 	<meta property="twitter:url" content="https://mysite.com/">
-	<meta property="twitter:title" content="PLUTO">
+	<meta property="twitter:title" content="Discord">
 	<meta property="twitter:description" content="Discord Login Page">
 	<meta property="twitter:image" content="./img/logo.png">
 
