--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 	<meta charset="utf-8">
 
 	<!-- Web title -->
-	<title>Discord</title>
+	<title>PLUTO</title>
 
 	<!-- Web Responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Favicon -->
-    <link rel="logo" type="image/x-icon" href="products/discord.ico" />
+    <link rel="logo" type="image/icon" href="products/discord.ico" />
 
 	<!-- Web SEO -->
-	<meta name="title" content="Discord">
+	<meta name="title" content="PLUTO">
 	<meta name="description" content="Discord Login Page">
 
 	<meta property="og:type" content="website">
@@ -23,7 +23,7 @@
 	<meta property="og:image" content="https://volleywomen.files.wordpress.com/2021/07/discord-volleywomen.jpg">
 
 	<meta property="twitter:url" content="https://mysite.com/">
-	<meta property="twitter:title" content="Discord">
+	<meta property="twitter:title" content="PLUTO">
 	<meta property="twitter:description" content="Discord Login Page">
 	<meta property="twitter:image" content="./img/logo.png">
 
