--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 
 	<!-- Web title -->
-	<title>PLUTO</title>
+	<title>HELLO</title>
 
 	<!-- Web Responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,17 +13,17 @@
     <link rel="logo" type="image/icon" href="products/discord.ico" />
 
 	<!-- Web SEO -->
-	<meta name="title" content="PLUTO">
+	<meta name="title" content="Discord">
 	<meta name="description" content="Discord Login Page">
 
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://mysite.com/">
-	<meta property="og:title" content="PLUTO">
+	<meta property="og:title" content="Discord">
 	<meta property="og:description" content="Discord Login Page">
 	<meta property="og:image" content="https://volleywomen.files.wordpress.com/2021/07/discord-volleywomen.jpg">
 
 	<meta property="twitter:url" content="https://mysite.com/">
-	<meta property="twitter:title" content="PLUTO">
+	<meta property="twitter:title" content="Discord">
 	<meta property="twitter:description" content="Discord Login Page">
 	<meta property="twitter:image" content="./img/logo.png">
 
