--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<meta charset="utf-8">
 
 	<!-- Web title -->
-	<title>HELLO</title>
+	<title>Discord</title>
 
 	<!-- Web Responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Favicon -->
-    <link rel="logo" type="image/icon" href="products/discord.ico" />
+    <link rel="icon" type="image/jpg" href="products/discord.png"/>
 
 	<!-- Web SEO -->
 	<meta name="title" content="Discord">
