--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/jpg" href="products/discord.png"/>
+    <link rel="icon" type="image/png" href="products/discord.png"/>
 
 	<!-- Web SEO -->
 	<meta name="title" content="Discord">
